--- a/report/main.tex
+++ b/report/main.tex
@@ -140,6 +140,7 @@ Our network architecture is structured into 3 parts (see figure \ref{fig:topo}):
     is configurable via an telnet/netcat terminal user interface.
 \end{description}
 \section{Protocols}
+In this section, the mainly used low level protocols for measuring and data forwarding will be introduced shortly. 
 \subsection{ZACwire}\label{chap:zac}
 ZACwire is a proprietary one wire comminucation protocol, developed
 by IST AG. ``One wire'' means, only one data line is needed.\\
