report: fixed some fixmes

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -90,3 +90,10 @@ ATmega328P},
   note ={Rev. 8161D–AVR–10/09},
   type = {User manual}
 }
+
+@misc{micronet,
+  title = {Microcontroller.net},
+  author = {Andreas Schwarz},
+  howpublished = {\url{http://www.mikrocontroller.net/articles/AVR_In_System_Programmer}},
+  note = {Accessed: 2014-09-08}
+}
