--- a/report/main.tex
+++ b/report/main.tex
@@ -3,6 +3,7 @@
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
 \usepackage[utf8]{inputenc}
+\usepackage[toc,page]{appendix}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{eurosym}
@@ -27,8 +28,11 @@ experiment setup}
 \begin{document}
 \maketitle
 \tableofcontents
+%###############################################################
 \chapter{Concept}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Features}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Sensors}
 \subsection{TSIC 506F}
 For temperature measurements, we use the TSIC 506F temperature sensor
@@ -104,6 +108,7 @@ Communication with the sensor is done via I2C. Thereby measurements can be initi
 	\label{fig:hyt_transmission}
 \end{figure}\\
 For further information about the sensor, and data interpretation, please refer to \cite{hyt}, \cite{hyt3} and \cite{hyt2}.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Logical design}
 Our network architecture is structured into 3 parts (see figure \ref{fig:topo}):
 \begin{figure}[Hh!]
@@ -137,6 +142,7 @@ Our network architecture is structured into 3 parts (see figure \ref{fig:topo}):
     forwarded to a couchDB database on the internet. Furthermore, the network 
     is configurable via an telnet/netcat terminal user interface.
 \end{description}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Protocols}
 In this section, the mainly used low level protocols for measuring and data forwarding will be introduced shortly. 
 \subsection{ZACwire}\label{chap:zac}
@@ -207,9 +213,11 @@ A detailed description of the protocol and its implementation can be found in \c
 	\label{fig:rs485}
 \end{figure}
 
+%###############################################################
 \chapter{Implementation}
 According to the logical design, three types of hardware boards are developed for implementation of the features in each parts: sensor board for measuring, collector board for data acquistion and ethernet board for data forwarding.\\
 In this capital, the used and needed tools for the development and mainteness will be described, as well as the hardware and sofware implementation details of the tree types of boards.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Toolchain}
 \subsection{KiCad}
 To design schematic circuit diagrams, as well as printed multilayer circuit boards, we used the open source EDA suite KiCad\footnote{http://www.kicad-pcb.org}. Most of the schematic and footprint components, were designed by ourselfes and can be found in the project git repository.\\
@@ -258,7 +266,8 @@ We use the make build environment. The Makefiles in each software directory cont
 For a first time build and upload, the above order should be respected. After the initial upload, fuses and eeprom should not be touched everytime, the software changes.\\
 To be able to find the Arduino library root path, the \emph{ARDUINO\_PATH} environment variable should be set to the Arduino installation directory. This for example is the Path to the cloned Arduino git reporitory.\\
 \textbf{Note}, that the Makefiles in the current version, do not automatically search for file dependancies, hence a make clean should be executed, after every change in not explicitly specified files, namely every non .c or .cpp file.
-\section{Sensor board} \label{chap:sensorbrd}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Sensor boards} \label{chap:sensorbrd}
 \subsection{Temperature board} \label{chap:tempbrd}
 The temperature board consists of the TSic506F sensor and
 complementary circuitry. The ZACwire signal is transformed to the
@@ -267,12 +276,6 @@ provides a RJ45 socket,  over which the required supply voltage of 5V
 should be provided, and the two differential signal outputs can be
 received. The schematic diagram can be seen in figure
 \ref{fig:schem_temp}.\\
-\begin{figure}[Hh!]
-	\centering
-	\includegraphics[width=0.7\textwidth]{img/schem_temperature_board.pdf}
-	\caption{Temperature board schematic. The Impedance adjustor circuit, R4 and C4 is not required to be populated, as we only transmit data.}
-	\label{fig:schem_temp}
-\end{figure}
 Care was taken, when soldering the temperature sensor, to minimize
 heat transfer to the chip. We did this by soldering each pin for a
 maximum time of 2 seconds, We also tried to keep the total time spent
@@ -281,44 +284,13 @@ immediately blowed cold air to the pins and the chip itself.\\
 %FIXME foto of the finish soldered board
 Figure \ref{fig:pcb_temp} shows the printed circuit board (PCB) schema and figure \ref{fig:soldered_temp} soldered temperature board. 
 In order to reduce the influence of the arised heat from the other electronic components, the temperature sensor is designed to put far away from the others and PCB tracks to the temperature sensor are thin within a narrow neck.
-\begin{figure}[Hh!]
-	\centering
-	%FIXME\includegraphics[width=0.7\textwidth]{img/schem_temperature_board.pdf}
-	\caption{Temperature printed circuit board schematic.}
-	\label{fig:pcb_temp}
-\end{figure}
-\begin{figure}[Hh!]
-	\centering
-	%FIXME\includegraphics[width=0.7\textwidth]{img/schem_temperature_board.pdf}
-	\caption{Temperature printed circuit board schematic.}
-	\label{fig:soldered_temp}
-\end{figure}
 \subsection{Humidity board}
 The hardware structure is similar to the temperature board, described in section \ref{chap:tempbrd}. However, as the HYT271 sensors use I2C for
 communication, we added a microcontroller to repediately poll the sensor for current measurement results and send the data out using a software
 implementation of the ZAC wire protocol. Therefore we also placed an ISP socket, a debugging adapter, a reset switch and two LEDs onto the board, which makes it
-slightly bigger than the temperature board. The schematic can be seen in figure \ref{fig:schem_hum}.
-\begin{figure}[Hh!]
-	\centering
-	\includegraphics[width=0.9\textwidth]{img/schem_humidity_board.pdf}
-	\caption{Humidity board schematic}
-	\label{fig:schem_hum}
-\end{figure}
-\\
+slightly bigger than the temperature board. The schematic can be seen in figure \ref{fig:schem_hum}.\\
 The design of the pcb schema is also similar to the temperature board, see
 figure \ref{fig:pcb_hum} and figure \ref{fig:soldered_hum} of a soldered humidity board. 
-\begin{figure}[Hh!]
-	\centering
-	%FIXME\includegraphics[width=0.7\textwidth]{img/schem_temperature_board.pdf}
-	\caption{Humidity printed circuit board schematic.}
-	\label{fig:pcb_hum}
-\end{figure}
-\begin{figure}[Hh!]
-	\centering
-	%FIXME\includegraphics[width=0.7\textwidth]{img/schem_temperature_board.pdf}
-	\caption{Humidity printed circuit board schematic.}
-	\label{fig:soldered_hum}
-\end{figure}
 \subsubsection{ZAC encoding}
 The easiliest method to generate ZAC encoding is to set a pin high, then use busy-wait delay loop ($\_delay\_us()$) to wait a certain time interval. After that set the pin to low. 
 But the timing of this method is not very exact (more than 6 $\mu$s inaccuracy according to an experimentation). Hence we had decided to use a timer to achive a higher timing accuracy. \\
@@ -347,6 +319,7 @@ In order to detect the bits error after a long distance transmission,
 %FIXME describe crc
 an 8-bit CRC checksum is computed and sent after the measured values. \\
 The using polynomial of GF(2) is 100110001.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Collector board}
 The collector board decodes the ZAC protocol and provides an I2C interface for
 reading out temperature, as well as humidity values of connected sensors.
@@ -411,12 +384,6 @@ The schematic diagram can be seen in figure \ref{fig:schem_collect}. The hardwar
     regulator, and also provide power to the I2C bus, all three pins
     should be shorted.
 \end{description}
-\begin{figure}
-	\centering
-	\includegraphics[width=1\textwidth]{img/schem_collector_board.pdf}
-	\caption{Collector board schematic}
-	\label{fig:schem_collect}
-\end{figure}
 \subsection{ZAC decoding}
 AVR controllers do not have hardware support for decoding the ZAC one wire
 protocol (protocol definition is explained in chapter \ref{chap:zac}). Hence we
@@ -604,6 +571,7 @@ figure \ref{fig:packetorder}.\\
 	\label{fig:packetorder}
 \end{figure}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Ethernet board}
 \subsection{Hardware}
 For the ethernet board we use a pre built Arduino Ethernet board
@@ -803,7 +771,9 @@ The following commands are supported:
     Controls the leds of connected collector boards. It is currently not possible, to read the state of the LEDs.\\
     Example: led 13 2 1
 \end{description}
+%###############################################################
 \chapter{Deployment}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Casings for the hardware}
 \begin{figure}
 	\centering
@@ -823,6 +793,7 @@ We also designed cases for the ethernet and collector boards, to be able to moun
 Cases for the collector board were designed to be stackable. This works well with the I2C chaining feature, as to extend the sensor network,
 only a new collector board has to be placed on top of the stack. The I2C plug can then be connected to the socket of the topmost board, and provides
 communication and power to the new board.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Installation}
 42 temperature sensors, 2 hymidity sensors with 6 collection boards and 2 arduino as internet board. We have tried to distribute them evenly in the lab room.
 \begin{figure}
@@ -831,11 +802,14 @@ communication and power to the new board.
   \caption{Installation plan}
 	\label{fig:install}
 \end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Maintenance}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Problems}
 Unsuccessful squid measurement\\
 Crash afer long runtime bug\\
 I2C connection only short ranged
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Developing / Extending}
 EEPROM persistance enable\\
 LEDs need most of power\\
@@ -843,15 +817,66 @@ Careful with multiple power sources\\
 Arduino fuses only accessable via ISP\\
 Makefile incomplete (.h dependencies)\\
 Link to git repo
+%###############################################################
 \chapter{References}
 %\renewcommand\refname{\vskip -1cm}
 %\bibliographystyle{abbrv}
 \bibliographystyle{plain}
 \begingroup
-\def\chapter*#1{}
+\def%###############################################################
+\chapter*#1{}
 \bibliography{bib}
 \endgroup
 %\bibliography{bib}
 \nocite{*}
+
+\begin{appendices}
+%###############################################################
+\chapter{Board Schematics}
+\begin{figure}[Hh!]
+	\centering
+	\includegraphics[width=0.7\textwidth]{img/schem_temperature_board.pdf}
+	\caption{Temperature board schematic. The Impedance adjustor circuit, R4 and C4 is not required to be populated, as we only transmit data.}
+	\label{fig:schem_temp}
+\end{figure}
+\begin{figure}[Hh!]
+	\centering
+	\includegraphics[width=0.9\textwidth]{img/schem_humidity_board.pdf}
+	\caption{Humidity board schematic}
+	\label{fig:schem_hum}
+\end{figure}
+\begin{figure}
+	\centering
+	\includegraphics[width=1\textwidth]{img/schem_collector_board.pdf}
+	\caption{Collector board schematic}
+	\label{fig:schem_collect}
+\end{figure}
+%###############################################################
+\chapter{Board PCB layout}
+\begin{figure}[Hh!]
+	\centering
+	%FIXME\includegraphics[width=0.7\textwidth]{img/schem_temperature_board.pdf}
+	\caption{Temperature printed circuit board schematic.}
+	\label{fig:pcb_temp}
+\end{figure}
+\begin{figure}[Hh!]
+	\centering
+	%FIXME\includegraphics[width=0.7\textwidth]{img/schem_temperature_board.pdf}
+	\caption{Temperature printed circuit board schematic.}
+	\label{fig:soldered_temp}
+\end{figure}
+\end{appendices}
+\begin{figure}[Hh!]
+	\centering
+	%FIXME\includegraphics[width=0.7\textwidth]{img/schem_temperature_board.pdf}
+	\caption{Humidity printed circuit board schematic.}
+	\label{fig:pcb_hum}
+\end{figure}
+\begin{figure}[Hh!]
+	\centering
+	%FIXME\includegraphics[width=0.7\textwidth]{img/schem_temperature_board.pdf}
+	\caption{Humidity printed circuit board schematic.}
+	\label{fig:soldered_hum}
+\end{figure}
 
 \end{document}
