--- a/report/main.tex
+++ b/report/main.tex
@@ -890,7 +890,14 @@ Link to git repo
 	\label{fig:pcb_arduino} %FIXME: add reference in text
 \end{figure}
 
-
+%###############################################################
+\chapter{Deployment images}
+\begin{figure}[Hh!]
+	\centering
+	\includegraphics[width=0.94\textwidth]{img/control_unit.jpg}
+	\caption{One of the two installed control units, consisting of three stacked collector boards and one ethernet board. The lids of the casings are removed here. Every cable to a sensor is marked with an unique identifier.}
+	\label{fig:control_unit} %FIXME: add reference in text
+\end{figure}
 \end{appendices}
 
 \end{document}
