--- a/report/main.tex
+++ b/report/main.tex
@@ -17,6 +17,7 @@
 \usepackage[bookmarks]{hyperref}
 \hypersetup{pdftex,colorlinks=true,allcolors=black}
 \usepackage{hypcap}
+\usepackage{listings}
 % the following commands control the margins:
 %\topmargin=-1in    % Make letterhead start about 1 inch from top of page 
 %\textheight=8.5in    % text height can be bigger for a longer letter
@@ -316,9 +317,55 @@ Until a new measured value is ready again, the whole procudure will be excute ag
 For detail usage of the microprocessor timer, please read the corresponding datasheet. For the microprocessor ATmega88P, which we used, see \cite{atmega88}. 
 \subsubsection{Cyclic redundancy check (CRC)}
 In order to detect the bits error after a long distance transmission, 
-%FIXME describe crc
-an 8-bit CRC checksum is computed and sent after the measured values. \\
-The using polynomial of GF(2) is 100110001.
+We attach an 8-bit CRC checksum for every block of measured values and then sent them out. \\
+CRC is a common method for error-detecting in digital networks and based on the theory of a polynomial division. 
+In galois field of two elements, GF(2),
+an n-bit checksum is the remainder of the division between data, shifted n bit to the left, and a (n+1)-bit polynomial as the divisor.
+Because the polynomial division in GF(2) is equivalent to an iteration of the bitwise XOR, a checksum can be computed in the following way:
+The divisor is at first shifted to the leftmost side of the input data block and computed XOR with the frist (n+1) bits.
+Then the result attached the rest unchanged input bits becomes new input and do the same XOR calculation with the divisor again and again, until no rest bits any more to attach and the n bits remainder is the to computed CRC checksum.
+An example of the calculation of a 4-bits checksum to the polynomial divisor 10011 (0x13) using this algorithm will be shown below:
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mathstyle}{
+    backgroundcolor=\color{backcolour},   
+    basicstyle=\scriptsize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=false,                                 
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+\lstset{style=mathstyle}
+\begin{lstlisting}[xleftmargin=25pt, xrightmargin=25pt,framexleftmargin=10pt,framextopmargin=10pt, framexbottommargin=10pt]
+1101 1001 1010 0011 0000  <-- input data block, shifted 4 bits to left 
+1001 1                    <-- polynomial divisor
+------------------------
+ 100 0001 0100 0011 0000  <-- result of the frist XOR round
+ 100 11
+ -----------------------
+     1101 0100 0011 0000
+     1001 1
+     -------------------
+      100 1100 0011 0000
+      100 11
+      ------------------
+                 11 0000
+                 10 011
+                 -------
+                  1 0110
+                  1 0011
+                  ------
+                     101 <---remainder, the checksum
+\end{lstlisting}
+By correctness checking of received data, the division of received data and the same polynomial is repeat.
+If the remainder is not equal zero, some error of the transfered data is detected, otherwise no error is found.
+But that does not mean, no error exists.
+May be the change of some bits leads to zero remainder accidentally. Fortunately, the probability of such detectable error is very low.\\
+The polynomial, which we use, is the standard CRC-8 for 1-wire bus: 100110001(0x131).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Collector board}
 The collector board decodes the ZAC protocol and provides an I2C interface for
